@@ -1,3 +1,10 @@
+2004-09-28  Mo DeJong  <mdejong@users.sourceforge.net>
+
+	* src/jacl/tcl/lang/TclOutputStream.java (flushChannel):
+	Add explicit call to flush() the OutputStream and to
+	sync() the FileDescriptor for a FileOutputStream. This
+	fixes a number of test regressions under Sun JDK 1.4 (Win32).
+
 2004-09-18  Alexander James Pasadyn  <ajpasadyn@users.sourceforge.net>
 
 	* src/jacl/tcl/lang/InfoCmd.java (InfoHostnameCmd): Implement
